# slackbot-panpal

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  tasks.py
app/: main.py
k8s/: pan-gpt.deployment.yaml  pan-gpt.secrets.sh  pan-gpt.service.yaml  slackbot-pan-pal.deployment.yaml  slackbot-pan-pal.secrets.sh  slackbot-pan-pal.service.yaml
slack/: manifest.yaml
